--- a/rucio-xlzd/templates/init-pod.yaml
+++ b/rucio-xlzd/templates/init-pod.yaml
@@ -12,7 +12,7 @@
        imagePullPolicy: Always
        env:
          - name: RUCIO_CFG_DATABASE_DEFAULT
-           value: postgresql+psycopg://rucio:rucio@postgres-postgresql/rucio
+           value: postgresql+psycopg://rucio:rucio@postgresql/rucio
          - name: RUCIO_CFG_DATABASE_SCHEMA
            value: test
          - name: RUCIO_CFG_BOOTSTRAP_USERPASS_IDENTITY
