--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -20,12 +20,18 @@ rucio:
     ca_path: "/etc/grid-security/certificates"    # Trusted CAs
 
 # Database Configuration (PostgreSQL)
-database:
-  type: postgresql
+postgresql:
+  # --  Configuration of built-in postgresql database. If 'enabled: true', a postgresql instance will be deployed, otherwise, an external database must be provided in database.default value
   enabled: true
-  postgresqlUsername: "rucio"
-  postgresqlPassword: "rucio"
-  postgresqlDatabase: "rucio"
+  global:
+    postgresql:
+      auth:
+        # -- The database username for authentication
+        username: rucio
+        # -- The password for the database user
+        password: "rucio"
+        # -- The name of the database to be created and used by Rucio
+        database: rucio
 
 # Storage Elements (RSE) Configuration
 bootstrap:
