--- a/rucio-xlzd/templates/postgresql.yaml
+++ b/rucio-xlzd/templates/postgresql.yaml
@@ -1,26 +1,10 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: postgresql
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: postgresql
-  template:
-    metadata:
-      labels:
-        app: postgresql
-    spec:
-      containers:
-      - name: postgresql
-        image: postgres:13
-        ports:
-          - containerPort: 5432
-        env:
-          - name: POSTGRES_USER
-            value: "{{ .Values.database.postgresqlUsername }}"
-          - name: POSTGRES_PASSWORD
-            value: "{{ .Values.database.postgresqlPassword }}"
-          - name: POSTGRES_DB
-            value: "{{ .Values.database.postgresqlDatabase }}"
+apiVersion: v2
+name: postgres-wrapper
+description: PostgreSQL wrapper
+version: 0.1.0
+appVersion: "1"
+
+dependencies:
+  - name: postgresql
+    version: "14.x.x"
+    repository: "https://charts.bitnami.com/bitnami"
