--- a/rucio-xlzd/templates/secrets.yaml
+++ b/rucio-xlzd/templates/secrets.yaml
@@ -4,4 +4,4 @@ metadata:
   name: rucio-secrets
 type: Opaque
 data:
-  db-password: {{ .Values.rucio.server.db_password | b64enc }}
+  db-password: {{ .Values.rucio.server.db_password }}
