--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -31,6 +31,11 @@ postgresql:
     # -- The name of the database to be created and used by Rucio
     database: rucio
 
+    image: postgres:14
+    persistence:
+      enabled: true
+      size: 5Gi
+
 # Storage Elements (RSE) Configuration
 bootstrap:
   rse:
