--- a/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
+++ b/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
@@ -19,4 +19,4 @@ postgresql:
       {{- end }}
 
   image:
-    tag: {{ .Values.postgres.image | split ":" | last | quote }}
+    tag: {{ (.Values.postgres.image | default "postgres:14") | split ":" | last | quote }}
