--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -31,7 +31,9 @@ postgres:
     # -- The name of the database to be created and used by Rucio
     database: rucio
 
-  image: "postgres:14"
+  image:
+    repository: postgres
+    tag: "14"
   persistence:
     enabled: true
     size: 5Gi
