--- a/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
+++ b/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
@@ -1,4 +1,4 @@
-postgresql:
+postgres:
   auth:
     username: {{ .Values.postgres.user | quote }}
     password: {{ .Values.postgres.password | quote }}
