--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -32,7 +32,7 @@ postgres:
     database: rucio
 
   image:
-    repository: postgres
+    repository: "postgres"
     tag: "14"
   persistence:
     enabled: true
