--- a/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
+++ b/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
@@ -18,5 +18,5 @@ primary:
     {{- end }}
 
 image:
-  repository: {{ .Values.postgres.image.repository | default "postgres" | quote }}
-  tag: {{ .Values.postgres.image.tag | default "14" | quote }}
+  repository: "postgres"
+  tag: "14"
