--- a/rucio-xlzd/templates/init-pod.yaml
+++ b/rucio-xlzd/templates/init-pod.yaml
@@ -1,24 +1,29 @@
----
-apiVersion: v1
-kind: Pod
+apiVersion: batch/v1 # Correct API version for Job
+kind: Job
 metadata:
-  name: init
+  name: rucio-init-job # Name the Job, not the Pod directly
   labels:
     app: rucio
 spec:
-  restartPolicy: Never
-  containers:
-    - name: init
-      image: rucio/rucio-init:latest
-      imagePullPolicy: Always
-      env:
-        - name: RUCIO_CFG_DATABASE_DEFAULT
-          value: postgresql+psycopg://rucio:rucio@postgres-postgresql/rucio
-        - name: RUCIO_CFG_DATABASE_SCHEMA
-          value: test
-        - name: RUCIO_CFG_BOOTSTRAP_USERPASS_IDENTITY
-          value: tutorial
-        - name: RUCIO_CFG_BOOTSTRAP_USERPASS_PWD
-          value: secret1R
-        - name: RUCIO_PRINT_CFG
-          value: "true"
+  template: # This defines the Pod template for the Job
+    metadata:
+      labels:
+        app: rucio
+    spec:
+      restartPolicy: Never # Crucial for a Job to complete
+      containers:
+        - name: init
+          image: rucio/rucio-init:latest
+          imagePullPolicy: Always
+          env:
+            - name: RUCIO_CFG_DATABASE_DEFAULT
+              value: postgresql+psycopg://rucio:rucio@postgres-postgresql/rucio
+            - name: RUCIO_CFG_DATABASE_SCHEMA
+              value: test
+            - name: RUCIO_CFG_BOOTSTRAP_USERPASS_IDENTITY
+              value: tutorial
+            - name: RUCIO_CFG_BOOTSTRAP_USERPASS_PWD
+              value: secret1R
+            - name: RUCIO_PRINT_CFG
+              value: "true"
+  backoffLimit: 4 # Optional: how many times to retry the Pod if it fails
