posgres values from yaml

--- a/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
+++ b/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
@@ -1,5 +1,5 @@
 auth:
-  username: {{ .Values.postgres.auth.user | quote }}
+  username: {{ .Values.postgres.auth.username | quote }}
   password: {{ .Values.postgres.auth.password | quote }}
   database: {{ .Values.postgres.auth.database | quote }}
 
