--- a/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
+++ b/rucio-xlzd/charts/postgres-wrapper/templates/postresql-values.yaml
@@ -1,19 +1,19 @@
 auth:
-  username: {{ .Values.postgres.auth.username | quote }}
-  password: {{ .Values.postgres.auth.password | quote }}
-  database: {{ .Values.postgres.auth.database | quote }}
+  username: {{ .Values.auth.username | quote }}
+  password: {{ .Values.auth.password | quote }}
+  database: {{ .Values.auth.database | quote }}
 
 primary:
   service:
     ports:
-      postgresql: {{ .Values.postgres.port | default 5432 }}
+      postgresql: {{ .Values.port | default 5432 }}
 
   persistence:
-    {{- if .Values.postgres.persistence }} # This will be false if .Values.postgres.persistence is not defined
-    enabled: {{ .Values.postgres.persistence.enabled | default false }}
-    size: {{ .Values.postgres.persistence.size | default "5Gi" | quote }}
+    {{- if .Values.persistence }} # This will be false if .Values.persistence is not defined
+    enabled: {{ .Values.persistence.enabled | default false }}
+    size: {{ .Values.persistence.size | default "5Gi" | quote }}
     {{- else }}
-    enabled: false # <-- This will always be set if .Values.postgres.persistence is missing from your values.yaml
+    enabled: false # <-- This will always be set if .Values.persistence is missing from your values.yaml
     size: "5Gi"
     {{- end }}
 
