client configuration changes

--- a/rucio-xlzd/templates/client-configmap.yaml
+++ b/rucio-xlzd/templates/client-configmap.yaml
@@ -6,13 +6,14 @@ metadata:
 data:
   rucio.cfg: |
     [client]
-    rucio_host = {{ .Values.rucio.server.host }}
-    auth_host = {{ .Values.rucio.server.host }}
-    auth_type = x509
-    account = {{ .Values.client.account }}
+    rucio_host = {{ .Values.client.config.rucio_host }}
+    auth_host = {{ .Values.client.config.auth_host }}
+    auth_type = {{ .Values.client.config.auth_type }}
+    account = {{ required "client.config.account is required!" .Values.client.config.account }}
     ca_cert = /etc/ca-certs/ca.cert.pem
-    client_cert = {{ .Values.client.x509_cert }}
-    client_key = {{ .Values.client.x509_key }}
+    # These paths point to where the user secret will be mounted inside the pod
+    client_cert = /opt/rucio/certs/user/usercert.pem
+    client_key = /opt/rucio/certs/user/userkey.pem
     request_retries = 3
 
     [policy]
