--- a/rucio-xlzd/templates/deployment.yaml
+++ b/rucio-xlzd/templates/deployment.yaml
@@ -72,6 +72,7 @@ spec:
         - name: user-cert-secret
           secret:
             secretName: {{ .Values.client.security.userSecretName }}
+            defaultMode: 0400
         # This is the extraVolume for the CA certs, which is correct
         {{- with .Values.client.extraVolumes }}
         {{- toYaml . | nindent 8 }}
