--- a/rucio-xlzd/templates/configmap.yaml
+++ b/rucio-xlzd/templates/configmap.yaml
@@ -4,6 +4,14 @@ metadata:
   name: rucio-config
 data:
   rucio.cfg: |
+    [client]
+    rucio_host = {{ .Values.rucio.server.host }}
+    auth_host = {{ .Values.rucio.server.host }}
+    auth_type = userpass
+    username = rucio
+    password = secret
+    account = root
+  
     [database]
     default = postgresql://{{ .Values.rucio.server.db_user }}:{{ .Values.rucio.server.db_password }}@{{ .Values.rucio.server.db_host }}/{{ .Values.rucio.server.db_name }}
 
