--- a/rucio-xlzd/values.yaml
+++ b/rucio-xlzd/values.yaml
@@ -36,10 +36,10 @@ rucio:
         readOnly: true
     service:
       type: ClusterIP
-      port: 443
-      targetPort: 443
+      port: 80
+      targetPort: 80
       protocol: TCP
-      name: https
+      name: http
 # Rucio Client Configuration
 client:
   # -- Set to true to deploy a Rucio client pod
